# sftp2webdav

./: .gitignore  README.md  pyproject.toml
ftp2webdav/: cli.py  config.py  ftp_handler.py  server.py
ftp2webdav/ftprelay/: __init__.py
ftp2webdav/resources/: example-config.yml
ftprelay/: pyproject.toml
ftprelay/src/ftprelay/: __init__.py
sftp2webdav/: cli.py  config.py  server.py
sftp2webdav/resources/: example-config.yml
