[tool.poetry]
name = "sftp2webdav"
version = "0.1.2"
description = "An SFTP/FTP server that forwards uploaded files to a WebDAV server"
authors = ["Fire Rat <sftp@firer.at>","Tomas Bayer <mail@tomas.berlin>"]
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
sftp2webdav = 'sftp2webdav.cli:app'

[tool.poetry.dependencies]
python = "^3.13"
cerberus = "^1.3.8"
easywebdav2 = "^1.3.0"
ftprelay = { path = "./ftprelay", develop = true } # Updated path to the local ftprelay directory
paramiko = "^3.4.0"
pyyaml = "^6.0"
typer = {extras = ["all"], version = "^0.20.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^9"

[tool.ruff]
line-length = 120
select = [
    "F",  # flake8
    "B",  # bugbear
    "E",  # pycodestyle
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "YTT", # sys.version check
    "S", # bandit
    "A001", "A002", # shadowing of builtins
    "FBT", # boolean trap
    "SIM", # simplify
    "COM", # commas
    "C4", # comprehensions
    "DTZ", # TZ aware datetime
    "T20", # print statements
    "RET501", "RET502", "RET503", "RET504", # return statements
    "PTH", # use pathlib
    "ERA", # eradicate
    "UP", # pyupgrade
    "RUF", # ruff rules
    "PYI", # pyi
]
ignore = [
    "SIM102", # nested ifs
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    "S101", # asserts
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
