[tool.poetry]
name = "ftprelay"
version = "0.1.0"
description = "Internal FTP relay components"
authors = ["Tomas Bayer <mail@tomas.berlin>"]

[tool.poetry.dependencies]
python = "^3.13"
pyftpdlib = "^1.5.0"

[[tool.poetry.packages]]
include = "ftprelay"
from = "src" # Specify that the package is located within the 'src' directory

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
